# jewelry-design-platform-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  example_requests.sh  pyproject.toml
app/: __init__.py  config.py  main.py
app/agents/: assistant_agent.py  concept_design_agent.py  desgin_agent.py  jewelry_2d_design_agent.py  jewelry_design_assistant_agent.py  jewelry_recommendation_agent.py  schemas.py
app/api/: chat.py  conversations.py  images.py  users.py
app/db/: database.py
app/models/: __init__.py  conversation.py  image.py  message.py  user.py
app/schemas/: __init__.py  artifact.py  conversation.py  image.py  jewelry.py  message.py  user.py
app/services/: __init__.py  assistant_service.py  conversation_service.py  image_service.py  product_factory.py  user_service.py
app/utils/: auth.py
ideas/: catalog.md  example_ideas.md  think_ideas.md
tests/: test_api.py
